fix: correct selector for cropper-container in babyPage.css

--- a/src/pages/BabyGenrator_page/babyPage.css
+++ b/src/pages/BabyGenrator_page/babyPage.css
@@ -412,8 +412,7 @@
     display: none;
   }
 }
-
-n .cropper-container {
+ .cropper-container {
   position: relative;
   width: 100%;
   height: 350px;
